--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
     "lint": "npx eslint ./src",
     "build": "tsc",
-    "start": "./dist/server.js",
+    "start": "node ./dist/server.js",
     "deploy": "tsc && vercel --prod",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
