--- a/.prettierrc
+++ b/.prettierrc
@@ -1,1 +1,8 @@
-{}
+{
+  "semi": true,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "trailingComma": "all",
+  "printWidth": 100,
+  "endOfLine": "auto"
+}
