--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "build": "tsc",
     "start": "node ./dist/server.js",
     "deploy": "tsc && vercel --prod",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "prettier:check": "npx prettier . --check",
+    "prettier:fix": "npx prettier . --write",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
